# MaskWalletCore

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/scripts/: package.sh  publish.sh
.github/workflows/: audit.yaml  build.yaml  dotnet.yaml  gui.yaml
chain-common/: Cargo.toml  build.rs
chain-common/proto/: Api.proto  Param.proto  account.proto  api.proto  base.proto  common.proto  key-store.proto  persona.proto  post-decryption.proto  post-encryption.proto  stored-key.proto  transaction.proto  validation.proto
chain-common/proto/sign/: Ethereum.proto
chain-common/src/: address.rs  coin.rs  convert.rs  entry.rs  generated.rs  lib.rs  private_key.rs  public_key.rs
chain/arweave/: Cargo.toml
chain/arweave/src/: address.rs  entry.rs  lib.rs
chain/ethereum/: Cargo.toml
chain/ethereum/src/: address.rs  address_checksum.rs  eip2930.rs  entry.rs  lib.rs  signer.rs  transaction.rs
chain/solana/: Cargo.toml
chain/solana/src/: address.rs  entry.rs  lib.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/function/: helper.rs  mod.rs  static_lib.rs  wasm.rs  xcframework.rs
cli/src/task/: cli_task.rs  mod.rs  static_lib.rs  task.rs  task_builder.rs  task_enum.rs  wasm.rs  xcframework.rs
crypto/: Cargo.toml
crypto/src/: aes.rs  aes_gcm.rs  aes_params.rs  bip32.rs  bip39.rs  curve.rs  encryption_constants.rs  hash.rs  jwk.rs  kdf_params.rs  key_store_json.rs  lib.rs  number_util.rs  payload_decode_v37.rs  payload_decode_v38.rs  payload_encode_v37.rs  payload_encode_v38.rs  payload_index_v37.rs  pbkdf2.rs  persona.rs  post_encryption.rs  public_key.rs  scrypt_params.rs
gui/: App.axaml  App.axaml.cs  Directory.Build.props  MaskCore.csproj  Program.cs  icon.icns
gui/Common/: Consts.cs
gui/Common/Extension/: EnumerabsleExtension.cs  RxRealmExtension.cs
gui/Common/Helpers/: MnemonicHelper.cs
gui/Data/Model/: DbPersonaModel.cs  DbWalletModel.cs
gui/Data/Repository/: PersonaRepository.cs  WalletRepository.cs
gui/Lifecycle/Controls/: Dialog.cs  Page.cs
gui/Lifecycle/ViewModel/: ViewModel.cs  ViewModelScope.cs
gui/Model/: PlatformType.cs
gui/UI/Controls/: MnemonicValidateControl.axaml  MnemonicValidateControl.axaml.cs
gui/UI/Model/: UiPersonaModel.cs  UiWalletModel.cs
gui/UI/Pages/Persona/: PersonaPage.axaml  PersonaPage.axaml.cs  PersonaViewModel.cs
gui/UI/Pages/Persona/CreatePersona/: CreatePersonaPage.axaml  CreatePersonaPage.axaml.cs  CreatePersonaViewModel.cs
gui/UI/Pages/Persona/MnemonicValidate/: MnemonicValidatePage.axaml  MnemonicValidatePage.axaml.cs  MnemonicValidateViewModel.cs  PersonaMnemonicValidatePage.axaml  PersonaMnemonicValidatePage.axaml.cs  PersonaMnemonicValidateViewModel.cs
gui/UI/Pages/Persona/RenamePersona/: RenamePersonaDialog.axaml  RenamePersonaDialog.axaml.cs  RenamePersonaViewModel.cs
gui/UI/Pages/Settings/: SettingsPage.axaml  SettingsPage.axaml.cs  SettingsViewModel.cs
gui/UI/Pages/Wallet/: WalletPage.axaml  WalletPage.axaml.cs  WalletViewModel.cs
gui/UI/Pages/Wallet/CreateWallet/: CreateWalletPage.axaml  CreateWalletPage.axaml.cs  CreateWalletViewModel.cs
gui/UI/Pages/Wallet/MnemonicValidate/: WalletMnemonicValidatePage.axaml  WalletMnemonicValidatePage.axaml.cs  WalletMnemonicValidateViewModel.cs
gui/UI/Pages/Wallet/RenameWallet/: RenameWalletDialog.axaml  RenameWalletDialog.axaml.cs  RenameWalletViewModel.cs
gui/UI/Shell/: RootShell.axaml  RootShell.axaml.cs  RootWindow.axaml  RootWindow.axaml.cs
interface/: Cargo.toml  build.rs
interface/proto/: Api.proto  Param.proto
interface/resource/: coin.json
interface/src/: api.rs  coin.rs  coins.rs  handler.rs  lib.rs  param.rs  response_util.rs
interface/src/handler/: account.rs  common.rs  decryption.rs  encryption.rs  persona.rs  sign.rs  stored_key.rs  validate.rs
interface/src/handler/persona/: mod.rs  persona_generation.rs
mobile/: Cargo.toml
mobile/src/: lib.rs
package/: .gitignore  .npmignore  README.md  package-lock.json  package.json
package/proto/: tsconfig.json
scripts/: build_iOS_lib.sh  proto.sh
target-dotnet/: MaskWalletCore.sln
target-dotnet/rust/: Cargo.toml
target-dotnet/rust/src/: lib.rs
target-dotnet/src/: CoinType.cs  CurveType.cs  EncryptionOption.cs  IWalletSignInput.cs  IWalletValidate.cs  ImportExportType.cs  JsonWebKey.cs  MaskWalletCore.csproj  MaskWalletCoreException.cs  Native.cs  PersonaKey.cs  RustByteSlice.cs  SignResult.cs  WalletAccount.cs  WalletKey.cs  WalletKeyType.cs
target-dotnet/test/: MaskWalletCoreTest.cs  MaskWalletCoreTest.csproj  PersonaKeyTest.cs
target-mobile/: Cargo.toml  build-xcframework.sh  build.rs  rust.h
target-mobile/iOS/: Info.plist  build-xcframework.sh  module.modulemap
target-mobile/src/: lib.rs
target-wasm/: Cargo.toml
target-wasm/src/: lib.rs
wallet/: Cargo.toml
wallet/src/: account.rs  coin.rs  coin_dispatcher.rs  derivation_path.rs  encryption_parameters.rs  encryption_params.rs  hd_wallet.rs  lib.rs  private_key.rs  public_key.rs  stored_key.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
