[package]
name = "chain-common"
version = "0.1.0"
authors = ["jk234ert <handan0524@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"