[package]
name = "cli"
version = "0.1.0"
authors = ["jk234ert <handan0524@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../interface" }
clap = { version = "3.1.6", features = ["derive", "cargo"] } 
colored = "2" 
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0"