[package]
name = "crypto"
version = "0.1.0"
authors = ["jk234ert <handan0524@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
hex = "0.4.3"
aes = "0.6.0"
aes-ctr = "0.6.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
scrypt = { version = "0.6.5", default-features = false }
secp256k1 = {version ="0.20.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"