[package]
name = "crypto"
version = "0.1.0"
authors = ["jk234ert <handan0524@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hex = "0.4.3"
sha2 = "0.9.4"
aes = { version = "0.7.0", features = ["ctr"] }
bitcoin = { version = "0.26.0" }
bip39 = { version = "1.0.1", features = ["all-languages", "rand"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
scrypt = { version = "0.6.5", default-features = false }
secp256k1 = {version ="0.20.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.3"