[package]
name = "crypto"
version = "0.1.0"
authors = ["jk234ert <handan0524@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4.3"
sha2 = "0.10.2"
aes = { version = "0.8.1" }
bitcoin = { version = "0.27.1" }
bip39 = { version = "1.0.1", features = ["all-languages"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
scrypt = { version = "0.10.0", default-features = false }
secp256k1 = {version ="0.22.1" }
ed25519-dalek = {version = "1.0.1"}
ed25519-dalek-bip32 = { version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
pbkdf2 = { version = "0.11", default-features = false }
hmac = { version = "0.12.1" }
ctr = { version = "0.9.1" }
aes-gcm = { version = "0.9.4" }
rmp-serde = { version = "1.1.0" }