[package]
name = "interface"
version = "0.1.0"
authors = ["jk234ert <handan0524@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
bytes = "1.0.1"

wasm-bindgen = "0.2"

wallet = { path = "../wallet" }

[lib]
name = "interface"
build = "build.rs"

crate-type = ["cdylib"]

[build-dependencies]
prost-build = "0.7.0"