[package]
name = "interface"
version = "0.1.0"
authors = ["jk234ert <handan0524@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
bytes = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

wasm-bindgen = "0.2"

chain-common = { path = "../chain-common" }
wallet = { path = "../wallet" }

[lib]
name = "interface"

crate-type = ["cdylib"]

