[package]
name = "target-mobile"
version = "0.1.0"
authors = ["jk234ert <handan0524@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../interface" }

[lib]
name = "mask_wallet_core_mobile"
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.21.0"