[package]
name = "wallet"
version = "0.1.0"
authors = ["jk234ert <handan0524@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
hex = "0.4.3"
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }

chain-common = { path = "../chain-common" }
ethereum = { path = "../chain/ethereum" }