[package]
name = "ethereum"
version = "0.1.0"
authors = ["jk234ert <handan0524@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = {version ="0.22.1", features = ["recovery"] }
ethereum-types = "0.13.1"
prost = "0.10.0"
hex = "0.4.3"
rlp = "0.5.0"
rlp-derive = { version = "0.1.0", default-features = false }
bytes = "1.0.1"
crypto = { path = "../../crypto" }
chain-common = { path = "../../chain-common" }