[package]
name = "solana"
version = "0.1.0"
authors = ["jk234ert <handan0524@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.27.1" }

crypto = { path = "../../crypto" }
chain-common = { path = "../../chain-common" }